# SimpleDataTransfer

./: CMakeLists.txt  README.md  main.cpp
include/: client.hpp  interface.hpp  relay_server.hpp
src/: client.cpp  interface.cpp  main.cpp  relay_server.cpp
